--- a/packages/create-keystone-app/package.json
+++ b/packages/create-keystone-app/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@keystonejs/adapter-knex": "^11.0.4",
     "@keystonejs/adapter-mongoose": "^9.0.5",
+    "@keystonejs/adapter-prisma": "^0.0.0",
     "@sindresorhus/slugify": "^0.11.0",
     "arg": "^4.1.3",
     "cfonts": "^2.8.6",
