--- a/packages/fields-oembed/package.json
+++ b/packages/fields-oembed/package.json
@@ -19,6 +19,7 @@
     "@iframely/embed.js": "^1.3.1",
     "@keystonejs/adapter-knex": "^11.0.4",
     "@keystonejs/adapter-mongoose": "^9.0.5",
+    "@keystonejs/adapter-prisma": "^0.0.0",
     "@keystonejs/fields": "^17.1.1",
     "@keystonejs/fields-content": "^8.0.3",
     "node-fetch": "^2.6.1",
