--- a/packages/fields-unsplash/package.json
+++ b/packages/fields-unsplash/package.json
@@ -17,6 +17,7 @@
     "@emotion/core": "^10.0.35",
     "@keystonejs/adapter-knex": "^11.0.4",
     "@keystonejs/adapter-mongoose": "^9.0.5",
+    "@keystonejs/adapter-prisma": "^0.0.0",
     "@keystonejs/fields": "^17.1.1",
     "@keystonejs/fields-content": "^8.0.3",
     "graphql-tag": "^2.11.0",
