--- a/package.json
+++ b/package.json
@@ -193,7 +193,7 @@
       "!packages/core/tests/default-entry/index.js",
       "!packages/fields/**/views/**",
       "!packages/fields/**/test-fixtures.js",
-      "!packages/fields/types.js",
+      "!packages/fields/types.js"
     ]
   },
   "resolutions": {
